--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,35 @@
+@font-face {
+  font-family: 'Thorndale';
+  src: local('Thorndale Bold'),
+  url('Thorndale-Bold.woff2') format('woff2'),
+  url('Thorndale-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Thorndale';
+  src: local('Thorndale'),
+  url('Thorndale.woff2') format('woff2'),
+  url('Thorndale.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.navbar{
+  background: #1D2430;
+}
+
+.bg-dark{
+  background-color: #1D2430;
+}
+
+.dropdown-menu {
+  background-color: #1D2430;
+}
+
 .darktheme{
-  background: #1a1b1f;
+  background: #070E1B;
 }
 
 .whitetext{
@@ -20,7 +50,9 @@ th[colspan="3"] {
 
 html, body{
  height:100%;
-  margin:0;
+ margin:0;
+ font-family: 'Thorndale';
+ font-size: 18px;
 }
 
 body {
@@ -30,7 +62,7 @@ body {
 }
 
 .anchor{
-   padding-top:50px;
+ padding-top:50px;
 }
 
 footer{
@@ -350,3 +382,4 @@ p {
 .burger-check {
   display: none;
 }
+
