--- a/css/custom.css
+++ b/css/custom.css
@@ -25,14 +25,16 @@ th[colspan="3"] {
   text-align: center;
 }
 
-html, body{
- height:100%;
+html{
+ height: 100%;
  margin:0;
  font-family: 'Roboto Slab', serif;
  font-size: 15px;
 }
 
 body {
+  font-family: 'Roboto Slab', serif;
+  min-height: 100%;
   padding-top: 56px;
   display:flex; 
   flex-direction:column; 
@@ -294,5 +296,13 @@ p {
 
 .charskill {
   width: 80px;
-  height: 80px;
+}
+
+.towntraits {
+  width: 40px;
+  height: 40px;
+}
+
+.portrait {
+  height: 125px;
 }
